# clion-conan-package

./: .gitignore  CMakeLists.txt  FindPNG.cmake  LICENSE  README.md  conanfile.py
test_package/: CMakeLists.txt  conanfile.py
